--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
-  "devDependencies": {}
+  "browserslist": [
+    "since 2010"
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "browserslist": "^4.23.0",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.16.1",
+    "typescript": "^5.4.5"
+  }
 }
