--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": [
-    "since 2010"
+    "since 2010" 
   ],
   "devDependencies": {
     "@babel/core": "^7.24.4",
