--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     ]
   },
   "browserslist": [
-    "since 2010" 
+    "since 2010"
   ],
   "devDependencies": {
     "browserslist": "^4.23.0",
+    "eslint": "^9.5.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jquery": "^1.12.4",
     "popper.js": "^1.16.1",
     "typescript": "^5.4.5"
