--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react-router-dom": "^5.3.4",
-    "reactstrap": "^9.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.1",
-    "axios": "^0.21.4"
+    "reactstrap": "^9.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,10 +30,10 @@
     "since 2010"
   ],
   "devDependencies": {
-    "browserslist": "^4.23.0",
+    "browserslist": "^4.24.4",
     "eslint": "^6.6.0",
     "jquery": "^1.12.4",
     "popper.js": "^1.16.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.2"
   }
 }
