--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.4",
-    "bootstrap": "^4.6.2",
+    "ajv": "^8.17.1",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3"
   },
   "scripts": {
@@ -31,8 +32,11 @@
   ],
   "devDependencies": {
     "browserslist": "^4.24.4",
-    "eslint": "^6.6.0",
-    "jquery": "^1.12.4",
+    "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-testing-library": "^6.0.0",
+    "react-scripts": "^5.0.1",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "typescript": "^5.8.2"
   }
