--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3"
   },
   "scripts": {
@@ -35,9 +34,10 @@
     "eslint": "^8.45.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-testing-library": "^6.0.0",
-    "react-scripts": "^5.0.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
+    "postcss-selector-parser": "^6.1.2",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.8.2"
   }
 }
