--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "reactstrap": "^9.2.3"
   },
