--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.14.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "rsuite": "^5.68.1"
   },
   "scripts": {
     "start": "react-scripts start",
