--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv": "^8.17.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "country-state-city": "^3.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^5.5.0",
